--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <main>
       <div id="home" class="container-fluid text-center p-5">
         <img src="logo.png" class="rounded mx-auto d-block p-3" alt="" />
-        <h1>SAINT MICHAEL COLLLEGE OF CARAGA</h1>
+        <h1>SAINT MICHAEL COLLEGE OF CARAGA</h1>
       </div>
       <div id="about" class="container-fluid text-center p-6 m-1">
         <h2>About us</h2>
